[tool.poetry]
name = "annotstein"
version = "0.1.1"
description = "Annotation tools for computer vision."
authors = ["Carlos Miranda <carlos.miralop@proton.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
pillow = "^10.0.0"
pydantic = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pre-commit = {version = "^3.4.0", optional = true}
ruff = {version = "^0.5.1", optional = true}

[tool.poetry.group.test.dependencies]
pytest = {version = "^7.4.2", optional = true}
coverage = {version = "^7.3.1", optional = true}

[tool.poetry.group.cli.dependencies]
typer = {version = "^0.9.0", optional = true}

[tool.poetry.group.s3.dependencies]
s3fs = {version = "^2024.6.1", optional = true}


[tool.poetry.group.gcs.dependencies]
gcsfs = {version = "^2024.6.1", optional = true}

[tool.poetry.extras]
cli = ["typer"]
s3 = ["s3fs"]
gcs = ["gcsfs"]

[tool.poetry.scripts]
annotstein = { reference = "annotstein.cli.main:app", type = "console" }

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
  "tests"
]

[tool.ruff]
# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
lint.select = ["E", "F"]
lint.ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["ALL"]
lint.unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
lint.per-file-ignores = {}

# Same as Black.
line-length = 130

# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.8
target-version = "py38"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
"Bug Tracker" = "https://github.com/CarMiranda/annotstein/issues"
Repository = "https://github.com/CarMiranda/annotstein.git"
